docs-archive/apache-airflow/1.10.5/_sources/_api/airflow/contrib/operators/emr_add_steps_operator/index.rst.txt
:mod:`airflow.contrib.operators.emr_add_steps_operator`
=======================================================

.. py:module:: airflow.contrib.operators.emr_add_steps_operator


Module Contents
---------------

.. py:class:: EmrAddStepsOperator(job_flow_id, aws_conn_id='s3_default', steps=None, *args, **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   An operator that adds steps to an existing EMR job_flow.

   :param job_flow_id: id of the JobFlow to add steps to. (templated)
   :type job_flow_id: str
   :param aws_conn_id: aws connection to uses
   :type aws_conn_id: str
   :param steps: boto3 style steps to be added to the jobflow. (templated)
   :type steps: list

   .. attribute:: template_fields
      :annotation: = ['job_flow_id', 'steps']

      

   .. attribute:: template_ext
      :annotation: = []

      

   .. attribute:: ui_color
      :annotation: = #f9c915

      

   
   .. method:: execute(self, context)




